--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de livros </title>
     <link rel="shortcut icon" href="imagens/site-logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="topo">
-        </h2>LIVROS</h2>
+        </h2>AVENTURAS LITERÁRIAS </h2>
         <section class="manubar">
             <ul>
                 <a href="">
                     <li>Página Inicial</li>
                 </a>
-                <a href="https://www.compra-agora.com/">
+                <a href="https://www.amazon.com.br/Livros/b/?ie=UTF8&node=6740748011&ref_=nav_cs_books">
                     <li>Sobre</li>
                 </a>
                 <a href="https://github.com/Clarice67">
                     <li>Contato</li>
                 </a>
-                <a class=" botao-securdario" href="https://www.compra-agora.com/">
+                <a class=" botao-securdario" href="https://www.amazon.com.br/Livros/b/?ie=UTF8&node=6740748011&ref_=nav_cs_books">
                     <li> Quero comprar livros</li>
                 </a>
             </ul>
@@ -31,13 +32,13 @@
     <section class="corpo"> 
 		<section class="esquerda"> 
 			<p> Comprar livros</p>
-			<h1> LIVROS</h1>
-			<p>Garantir o melhor serviço possível e pronta entrega por parte do fornecedor. Desenvolver e manter boas relações com os fornecedores e desenvolver fornecedores potenciais.Obter mercadorias e serviços na quantidade e com qualidade necessárias. </p>
+			<h1> MUNDO DOS LIVROS </h1>
+			<p>Bem-vindo ao nosso universo literário! Explore histórias envolventes e conhecimentos fascinantes em cada página. Garantimos o melhor serviço e entrega rápida. Mantemos relações sólidas com nosssos fornecedores para garantir mercadorias e serviços de alta qualidade. Junte-se á nossa comunidade de leitores ávidos e embarque nesta jornada literária! </p>
 			<a class="botao-primario" href=" ">Quero comprar</a>
 		</section>
 
 		<section class="direita">
-			<img src="pngtree-shopping-or-buy-online-symbol-with-bags-and-icon-cart-or-png-image_2303164.jpg" alt="">
+			<img class="img_principal" src="imagens/principal.png" alt="">
 		</section>
 	</section>
 </body>
