--- a/index.html
+++ b/index.html
@@ -41,6 +41,107 @@
 			<img class="img_principal" src="imagens/principal.png" alt="">
 		</section>
 	</section>
+
+    <section id="produtos">
+        <h2>Nossos produtos</h2>
+        <h3>Descubra a excelência incomparável em cada detalhe.</h3>
+        <section class="produtos">
+            <section class="produto">
+                <img src="imagens/imagem 1.png" alt="">
+                <a class="botao-primario" href="">Compre</a>
+            </section>
+            <section class="produto">
+                <img src="imagens/imagem 2.png" alt="">
+                <a class="botao-primario" href="">Compre</a>
+            </section>
+            <section class="produto">
+                <img src="imagens/imagem 3.png" alt="">
+                <a class="botao-primario" href="">Compre</a>
+            </section>
+        </section>
+    </section>
+
+    <section id="beneficios">
+        <h2>Benefícios</h2>
+        <section class="beneficios">
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Entretenimento Sustentavel</h4>
+            </section>
+            <p>Livros são uma fonte de entretenimento duradouro , transportando-nos para diferentes mundos.</p>
+            </section>
+
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Criatividade</h4>
+            </section>
+            <p>Seu mecanismo revolucionário possibilita que cada fone se movimente de forma independente e equilibre a pressão.</p>
+            </section>
+
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Ajuste impecável</h4>
+            </section>
+            <p>As almofadas criam uma vedação confortável e total, que é o primeiro passo para um som incrível.</p>
+            </section>
+        </section>
+        <a class="botao-primario" href="">Comprar agora!</a>
+    </section>
+
+    <section id="sobre-nos">
+        <section class="esquerda">
+            <img src="imagens/último.png" alt="">
+        </section>
+        <section class="direita">
+            <h2>Sobre nós</h2>
+            <p>Somos mais do que uma marca, somos uma paixão por inovação e excelência. No coração de nossa jornada está o compromisso com a criação de experiências excepcionais. Combinamos artesanato refinado com tecnologia de ponta para oferecer produtos que transcendem as expectativas.
+                <br><br>
+                Nossa história tem dedicação à qualidade, à inspiração e à busca incessante pelo extraordinário. Convidamos você a se juntar a nós nessa jornada, onde cada detalhe conta e cada experiência é única.
+                <br><br>
+                Acreditamos que cada interação é uma oportunidade de construir conexões significativas. Nossa história é contada através dos sorrisos dos clientes satisfeitos, das inovações que moldam o futuro e das relações duradouras que construímos ao longo do caminho.</p>
+            <a class="botao-primario" href="">Comprar agora!</a>
+            </section>
+    </section>
+
+    <footer>
+        <section class="marca">
+            <img src="images/logo.svg" alt="">
+            <p>Mais do que um fone: um sonho!</p>
+        </section>
+        <section class="informacoes">
+            <h5>Informações</h5>
+            <ul>
+                <li>Contate-nos</li>
+                <li>Sobre nós</li>
+                <li>Blog</li>
+                <li>FAQs</li>
+            </ul>
+        </section>
+        <section class="empresa">
+            <h5>Empresa</h5>
+            <ul>
+                <li>Promoções</li>
+                <li>Carreiras</li>
+                <li>Termos e condições</li>
+                <li>Políticas de privacidade</li>
+            </ul>
+        </section>
+        <section class="contato">
+            <h5>Conecte-se conosco!</h5>
+            <section class="icons">
+                <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+            </section>
+        </section>
+    </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
