--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                     <h4>Criatividade</h4>
             </section>
-            <p>Seu mecanismo revolucionário possibilita que cada fone se movimente de forma independente e equilibre a pressão.</p>
+            <p>A exposição a diversas narrativas e estilos literarios estimula a criatividade, beneficiando o desenvolvimento de habilidades inovadoras.</p>
             </section>
 
             <section class="beneficio">
                 <section class="beneficio-titulo">
                     <ion-icon name="checkmark-circle"></ion-icon>
-                    <h4>Ajuste impecável</h4>
+                    <h4>Redução de estresse</h4>
             </section>
-            <p>As almofadas criam uma vedação confortável e total, que é o primeiro passo para um som incrível.</p>
+            <p>A leitura reduz o estresse, proporcionando uma pausa mental relaxante.</p>
             </section>
         </section>
         <a class="botao-primario" href="">Comprar agora!</a>
@@ -109,33 +109,30 @@
     <footer>
         <section class="marca">
             <img src="images/logo.svg" alt="">
-            <p>Mais do que um fone: um sonho!</p>
+            <p>“A leitura é a chave para abrir inúmeras portas e desvendar os mistérios do universo”</p>
         </section>
         <section class="informacoes">
             <h5>Informações</h5>
             <ul>
                 <li>Contate-nos</li>
                 <li>Sobre nós</li>
-                <li>Blog</li>
-                <li>FAQs</li>
             </ul>
         </section>
         <section class="empresa">
             <h5>Empresa</h5>
             <ul>
                 <li>Promoções</li>
-                <li>Carreiras</li>
-                <li>Termos e condições</li>
                 <li>Políticas de privacidade</li>
+                <li>Termos e condições</li>
             </ul>
         </section>
         <section class="contato">
-            <h5>Conecte-se conosco!</h5>
+            <h5>Redes sociais</h5>
             <section class="icons">
-                <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
                 <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
-                <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
                 <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href=""><ion-icon name="logo-tiktok"></ion-icon></a>
             </section>
         </section>
     </footer>
